--- a/ApexIntegrator1/ApexIntegrator1/Views/Home/Index.cshtml
+++ b/ApexIntegrator1/ApexIntegrator1/Views/Home/Index.cshtml
@@ -2,30 +2,49 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="well-lg">    
+    <form class="form-inline">
+        <div class="form-group">
+            <label for="txtNewAddress">Address</label>
+            <input type="text" class="form-control" id="txtNewAddress" placeholder="Type Address">
+        </div>        
+        <button type="submit" class="btn btn-default" id="btnCreateOrder">Create Order</button>
+    </form>
+</div>
+<div id="divOrders">
+
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+<script src="~/Scripts/jquery-1.10.2.js"></script>
+<script src="~/Scripts/rx.all.js"></script>
+<script>
+
+    var orderIx = 1;
+
+    $(document).ready(function () {
+                
+        $('#btnCreateOrder').click(function () {
+            var address = $('#txtNewAddress').val();
+            if (address) {
+                console.log(address);
+
+                $('#txtNewAddress').val('');
+
+                $.ajax({
+                    type: "Post",
+                    url: "/Order/CreateOrder",
+                    data: { address: address }
+                }).promise()
+                .then(function (data) {
+                    console.log(data);
+                });
+
+                $('#divOrders').append('<div>' + address + '</div>');
+                
+            }
+            return false;
+        });
+    });
+    
+</script>
